Refactored Poll Bot